@@ -1,5 +1,8 @@
 <plugin>
     <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-surefire-report-plugin</artifactId>
-    <version>2.18</version>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>2.22.2</version>
+    <configuration>
+        <argLine>--enable-preview</argLine>
+    </configuration>
 </plugin>
